--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,33 +1,14 @@
-SUBDIRS = @UI_DIR@ @ENC_DIR@ @AUTH_DIR@ @GAIM_PLUGIN_DIR@ 
+SUBDIRS = libdirectnet @UI_DIR@ @GAIM_PLUGIN_DIR@ 
 
-lib_LIBRARIES=libdirectnet.a
 bin_PROGRAMS=directnet
-
-libdirectnet_a_SOURCES=binseq.cc \
-chat.cc \
-client.cc \
-connection.cc \
-dht.cc \
-directnet.cc \
-dnconfig.cc \
-message.cc \
-route.cc \
-server.cc \
-whereami.cc
-
-if NO_GETTIMEOFDAY
-libdirectnet_a_SOURCES+=compat/gettimeofday.c
-endif
-
-libdirectnet_a_ARFLAGS=@ENC_DIR@/*.o @AUTH_DIR@/*.o
 
 directnet_SOURCES=empty.cc
 directnet_CFLAGS=@UI_CFLAGS@ @ENC_CFLAGS@ @AUTH_CFLAGS@
 directnet_CXXFLAGS=@UI_CXXFLAGS@ @ENC_CXXFLAGS@ @AUTH_CXXFLAGS@
 directnet_LDFLAGS=@UI_LDFLAGS@ @ENC_LDFLAGS@ @AUTH_LDFLAGS@
-directnet_DEPENDENCIES=@UI_DIR@/libui.a @ENC_DIR@/libenc.a @AUTH_DIR@/libauth.a
-directnet_LDADD=libdirectnet.a @UI_DIR@/libui.a @ENC_DIR@/libenc.a \
- @AUTH_DIR@/libauth.a @UI_LIBS@ @ENC_LIBS@ @AUTH_LIBS@
+directnet_DEPENDENCIES=@UI_DIR@/libui.a libdirectnet/libdirectnet.a
+directnet_LDADD=libdirectnet/libdirectnet.a @UI_DIR@/libui.a @UI_LIBS@ \
+  @ENC_LIBS@ @AUTH_LIBS@
 
 
 #if GAIM_PLUGIN
