--- a/src/ui-java/Makefile.in
+++ b/src/ui-java/Makefile.in
@@ -199,7 +199,7 @@ sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
-AM_CXXFLAGS = @UI_CFLAGS@ -I..
+AM_CXXFLAGS = @UI_CFLAGS@ -I../libdirectnet
 AM_LDFLAGS = @UI_LDFLAGS@
 noinst_LIBRARIES = libui.a
 libui_a_SOURCES = ui.cc
